crates/toml_edit/tests/snapshots/invalid/ext/datetime/year-3digits.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 199-09-09
  |       ^^^^^^^^^
invalid date, expected a four-digit year (YYYY)
